{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 49,
  "lineage": "8fb61053-b86f-453d-80ea-c6146d60e929",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f27922d14d6f8a84",
            "arn": "arn:aws:ec2:ca-central-1:995419655044:elastic-ip/eipalloc-0f27922d14d6f8a84",
            "association_id": "eipassoc-04727e4dae01b7d19",
            "domain": "vpc",
            "id": "eipalloc-0f27922d14d6f8a84",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-0756232912e1e6f4d",
            "private_dns": "ip-10-0-1-235.ca-central-1.compute.internal",
            "private_ip": "10.0.1.235",
            "public_dns": "ec2-15-156-136-137.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.156.136.137",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "speckle-cluster-nat-eip-1"
            },
            "tags_all": {
              "Name": "speckle-cluster-nat-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0957ed9255b863367",
            "arn": "arn:aws:ec2:ca-central-1:995419655044:elastic-ip/eipalloc-0957ed9255b863367",
            "association_id": "eipassoc-053c211798a9613f1",
            "domain": "vpc",
            "id": "eipalloc-0957ed9255b863367",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-01defe7a0c206f9a8",
            "private_dns": "ip-10-0-2-131.ca-central-1.compute.internal",
            "private_ip": "10.0.2.131",
            "public_dns": "ec2-16-52-252-99.ca-central-1.compute.amazonaws.com",
            "public_ip": "16.52.252.99",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "speckle-cluster-nat-eip-2"
            },
            "tags_all": {
              "Name": "speckle-cluster-nat-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:995419655044:internet-gateway/igw-0a6bb4bcaac344377",
            "id": "igw-0a6bb4bcaac344377",
            "owner_id": "995419655044",
            "tags": {
              "Name": "speckle-cluster-igw"
            },
            "tags_all": {
              "Name": "speckle-cluster-igw"
            },
            "vpc_id": "vpc-0b654b6c14474b650"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f27922d14d6f8a84",
            "association_id": "eipassoc-04727e4dae01b7d19",
            "connectivity_type": "public",
            "id": "nat-0dd0dffd713499aeb",
            "network_interface_id": "eni-0756232912e1e6f4d",
            "private_ip": "10.0.1.235",
            "public_ip": "15.156.136.137",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0912797200e0b8622",
            "tags": {
              "Name": "speckle-cluster-nat-1"
            },
            "tags_all": {
              "Name": "speckle-cluster-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0957ed9255b863367",
            "association_id": "eipassoc-053c211798a9613f1",
            "connectivity_type": "public",
            "id": "nat-08b1f9c5c6133d259",
            "network_interface_id": "eni-01defe7a0c206f9a8",
            "private_ip": "10.0.2.131",
            "public_ip": "16.52.252.99",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d591dbcb36fe4046",
            "tags": {
              "Name": "speckle-cluster-nat-2"
            },
            "tags_all": {
              "Name": "speckle-cluster-nat-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:995419655044:route-table/rtb-073f21d254e29a3f7",
            "id": "rtb-073f21d254e29a3f7",
            "owner_id": "995419655044",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dd0dffd713499aeb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "speckle-cluster-private-rt-1"
            },
            "tags_all": {
              "Name": "speckle-cluster-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b654b6c14474b650"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:995419655044:route-table/rtb-0a8017782a4aa6c96",
            "id": "rtb-0a8017782a4aa6c96",
            "owner_id": "995419655044",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08b1f9c5c6133d259",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "speckle-cluster-private-rt-2"
            },
            "tags_all": {
              "Name": "speckle-cluster-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b654b6c14474b650"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:995419655044:route-table/rtb-05bd5fbd9399ba44b",
            "id": "rtb-05bd5fbd9399ba44b",
            "owner_id": "995419655044",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a6bb4bcaac344377",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "speckle-cluster-public-rt"
            },
            "tags_all": {
              "Name": "speckle-cluster-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b654b6c14474b650"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e67dc5fe320a302a",
            "route_table_id": "rtb-073f21d254e29a3f7",
            "subnet_id": "subnet-0ff72f7c0a2f9ceb8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077d8493e0a5e6a81",
            "route_table_id": "rtb-0a8017782a4aa6c96",
            "subnet_id": "subnet-0cface27a822646fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c67c99b9cfeb306",
            "route_table_id": "rtb-05bd5fbd9399ba44b",
            "subnet_id": "subnet-0912797200e0b8622"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f57e2fbe5ec4c56",
            "route_table_id": "rtb-05bd5fbd9399ba44b",
            "subnet_id": "subnet-0d591dbcb36fe4046"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:995419655044:security-group/sg-047efbab430750551",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047efbab430750551",
            "ingress": [],
            "name": "speckle-cluster-cluster-sg",
            "name_prefix": "",
            "owner_id": "995419655044",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "speckle-cluster-cluster-sg"
            },
            "tags_all": {
              "Name": "speckle-cluster-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b654b6c14474b650"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:995419655044:security-group/sg-0824f711ac57c8536",
            "description": "Security group for EKS nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0824f711ac57c8536",
            "ingress": [],
            "name": "speckle-cluster-nodes-sg",
            "name_prefix": "",
            "owner_id": "995419655044",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "speckle-cluster-nodes-sg"
            },
            "tags_all": {
              "Name": "speckle-cluster-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b654b6c14474b650"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:995419655044:security-group/sg-03395a6a5bb1ed72c",
            "description": "Security group for RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03395a6a5bb1ed72c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0824f711ac57c8536"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "speckle-cluster-rds-sg",
            "name_prefix": "",
            "owner_id": "995419655044",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "speckle-cluster-rds-sg"
            },
            "tags_all": {
              "Name": "speckle-cluster-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b654b6c14474b650"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:995419655044:security-group/sg-0e3fb909a39877d9f",
            "description": "Security group for ElastiCache Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3fb909a39877d9f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0824f711ac57c8536"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "speckle-cluster-redis-sg",
            "name_prefix": "",
            "owner_id": "995419655044",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "speckle-cluster-redis-sg"
            },
            "tags_all": {
              "Name": "speckle-cluster-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b654b6c14474b650"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:995419655044:subnet/subnet-08ff01cd330987279",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ff01cd330987279",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "995419655044",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "speckle-cluster-database-1"
            },
            "tags_all": {
              "Name": "speckle-cluster-database-1"
            },
            "vpc_id": "vpc-0b654b6c14474b650"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:995419655044:subnet/subnet-031a45ec5fe84492d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031a45ec5fe84492d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "995419655044",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "speckle-cluster-database-2"
            },
            "tags_all": {
              "Name": "speckle-cluster-database-2"
            },
            "vpc_id": "vpc-0b654b6c14474b650"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:995419655044:subnet/subnet-0ff72f7c0a2f9ceb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff72f7c0a2f9ceb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "995419655044",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "speckle-cluster-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "speckle-cluster-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b654b6c14474b650"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:995419655044:subnet/subnet-0cface27a822646fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cface27a822646fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "995419655044",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "speckle-cluster-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "speckle-cluster-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b654b6c14474b650"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:995419655044:subnet/subnet-0912797200e0b8622",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0912797200e0b8622",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "995419655044",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "speckle-cluster-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "speckle-cluster-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b654b6c14474b650"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:995419655044:subnet/subnet-0d591dbcb36fe4046",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d591dbcb36fe4046",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "995419655044",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "speckle-cluster-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "speckle-cluster-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b654b6c14474b650"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:995419655044:vpc/vpc-0b654b6c14474b650",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cb2fd4f0afb92a9c",
            "default_route_table_id": "rtb-076fb6a564c56df26",
            "default_security_group_id": "sg-06e45adb344512d4e",
            "dhcp_options_id": "dopt-01b5d4c39d81ab58e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b654b6c14474b650",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-076fb6a564c56df26",
            "owner_id": "995419655044",
            "tags": {
              "Name": "speckle-cluster-vpc"
            },
            "tags_all": {
              "Name": "speckle-cluster-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}